--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href"css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
 <title>Document</title>
 </head>
 <body>
 
+
+    <a href="#link" class="btn btn-info" role="button">Link Button</a>
+
+!
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
