--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 </head>
 <body>
 
+    <?php
+        include "login.php";
+    ?>
 
-    <a href="#link" class="btn btn-info" role="button">Link Button</a>
+<div class="d-grid gap-2 col-6 mx-auto">
+    <a href="login.php" class="btn btn-primary" role="button">login</a>
+    <a href="registration.html" class="btn btn-primary" role="button">registration</a>
+  </div>
 
-!
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
